# release-feed-mediola

./: .editorconfig  .gitignore  CONTRIBUTING.md  README.md  USAGE.md  mypy.ini  pyproject.toml
.github/workflows/: build-dist.yml  ci.yml  manual-test.yml  pr-post-merge.yml  prepare-release.yml  release.yml
.redport/: manifest.rpt.json
.redport/cookiecutter_replay/: cookiecutter-python-package.json
.redport/patches/: create-venv.patch  disable-install-step-2ecbd4e.patch  disable-install-step.before.819f24c.patch  dot-python-version.patch
contrib/systemd/: release-feed-mediola@.service  release-feed-mediola@.timer
debian/: changelog  control  copyright  release-feed-mediola.install  release-feed-mediola.manpages  rules
doc/sphinx/: conf.py  index.rst
release_feed_mediola/: __init__.py  __main__.py  api.py  cli.py  feed.py  settings.py  version.py
tests/: test_api.py  test_feed.py
tests/fixtures/: neo.json
